--- a/DOM-webpack4-boiler/src/styles/index.scss
+++ b/DOM-webpack4-boiler/src/styles/index.scss
@@ -1,13 +1,14 @@
 html, body {
-    background: #000;
+    background: #141E30;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 50px;
     text-align: center;
     color: lightsalmon;
     font-family: 'Yusei Magic', sans-serif;
-
 }
