working with vanilla dom javascript

--- a/DOM-webpack4-boiler/src/styles/index.scss
+++ b/DOM-webpack4-boiler/src/styles/index.scss
@@ -12,3 +12,8 @@ h1 {
     color: lightsalmon;
     font-family: 'Yusei Magic', sans-serif;
 }
+
+#addTasksbtn {
+    color: #000;
+    background: lightsalmon;;
+}
