--- a/DOM-webpack4-boiler/src/styles/index.scss
+++ b/DOM-webpack4-boiler/src/styles/index.scss
@@ -13,7 +13,7 @@ h1 {
     font-family: 'Yusei Magic', sans-serif;
 }
 
-#addTasksbtn {
+#addTasksButton {
     color: #000;
     background: lightsalmon;;
 }
