--- a/DOM-webpack4-boiler/src/styles/index.scss
+++ b/DOM-webpack4-boiler/src/styles/index.scss
@@ -43,3 +43,16 @@ h1 {
     height: 26px;
     border-radius: 50%;
 }
+
+.inner-textArea {
+    resize: none;
+    position: absolute;
+    background: #ddd;
+    padding: 5px;
+    font-size: 15px;
+    font-family: 'Yusei Magic', sans-serif;
+    top: 0;
+    left: 0;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.35);
+
+}
